Разметил главную страницу

--- a/index.html
+++ b/index.html
@@ -1,12 +1,119 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+ 	<head>
+    	<meta charset="utf-8">
+    	<title>Седона</title>
   </head>
-  <body>
+  	<body>
+  		<div class="wrapper"> 
+	  		<header class="main-header">
+	  			<a class="main-header-logo" href="#">
+	  				<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
+	  			</a>
+	  			<nav class="main-navigation">
+	  				<ul class="site-navigation-left">
+	  					<li><a href="#">Информация</a></li>
+	  					<li><a href="#">Фото и видео</a></li>
+	  				</ul>
+	  				<ul class="site-navigation-right">
+	  					<li><a href="#">Карта штата</a></li>
+	  					<li><a href="#">Гостиницы</a></li>
+	  				</ul>
+	  			</nav>
+	  		</header>
+	  		<main class="container">
+	  			<h1 class="visually-hidden">Sedona</h1>
+	  			<section class="welcome">
+	  				<h2 class="visually-hidden">Welcome to Sedona</h2>
+	  				<img src="http://placehold.it/255x85" width="255" height="85" alt="Welcome to">
+	  				<img src="http://placehold.it/460x75" width="460" height="75" alt="Sedona">
+	  				<img src="http://placehold.it/295x80" width="295" height="80" alt="&laquo;Because the Grand Canyon sucks!&raquo;">
+	  			</section>
+	  			<section class="features">
+	  				<h2 class="visually-hidden">Преимущетсва</h2>
+	  				<div class="features-description">
+		  				<h3> Седона — небольшой городок в Аризоне, заслуживающий большего!</h3>
+		  				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+	  				</div>
+	  				<div class="fetures-list">
+	  					<div class="feture">
+	  						<h3>Настоящий городок</h3>
+	  						<p>&nbsp;&mdash; №1&nbsp;&mdash;</p>
+	  						<p>Седона &nbsp; не аттракцион для туристов, там течет своя жизнь</p>
+	  					</div>
+	  				</div>
+	  				<div class="fetures-hight-list">
+	  					<div class="feture-hight">
+	  						<h3>Жилье</h3>
+	  						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+	  					</div>
+	  					<div class="feture-hight">
+	  						<h3>Еда</h3>
+	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+	  					</div>
+	  					<div class="feture-hight">
+	  						<h3>Сувениры</h3>
+	  						<p>Не только китайского, но и местного производства!</p>
+	  					</div>
+	  				</div>
+	  				<div class="fetures-list">
+	  					<div class="feture">
+	  						<h3>Там есть мост дьявола</h3>
+	  						<p>&nbsp;&mdash; №2&nbsp;&mdash;</p>
+	  						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+	  					</div>
+	  				</div>
+	  				<div class="fetures-list">
+	  					<div class="feture">
+	  						<h3>Небольшая площадь</h3>
+	  						<p>&nbsp;&mdash; №3&nbsp;&mdash;</p>
+	  						<p>Все достопримечательности находятся очень близко</p>
+	  					</div>
+	  					<div class="feture">
+	  						<h3>Красивая дорога</h3>
+	  						<p>&nbsp;&mdash; №4&nbsp;&mdash;</p>
+	  						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+	  					</div>
+	  					<div class="feture">
+	  						<h3>Мало туристов</h3>
+	  						<p>&nbsp;&mdash; №5&nbsp;&mdash;</p>
+	  						<p>Большинство едет в Гранд Каньон и толпится там</p>
+	  					</div>
+	  				</div>
+	  			</section>
+	  			<section class="offers">
+	  				<h2>Заинтересовались?</h2>
+	  				<p>Укажтите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+	  				<span class="button hostel-search-button">Поиск гостиницы в Седоне</span>
+	  			</section>
+	  			<section class="map">
+	  				<h2 class="visually-hidden">Карта</h2>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+	  				<!-- Карта будет тут-->
 
-  </body>
+	  			</section>
+	  		</main>
+	  		<footer class="main-footer">
+	  			<p class="footer-hashtag">
+	  				<b>#visitsedona</b>
+	  			</p>
+	  			<div class="footer-social">
+	  				<ul>
+	  					<li><a class="social-button" href="#">Twitter</a></li>
+	  					<li><a class="social-button" href="#">Facebook</a></li>
+	  					<li><a class="social-button" href="#">YouTube</a></li>
+	  				</ul>
+	  			</div>
+	  			<p class="footer-copyright">
+	  				website by <a href="https://htmlacademy.ru/">HTML Academy</a>
+	  			</p>
+	  		</footer>
+	  		<section class="modal modla-hostel-search">
+	  			<h2 class="visually-hidden">Поиск гостиницы</h2>
+
+	  			<!-- Здесь будет форма -->
+	  			
+	  		</section>
+	  	</div>
+  	</body>
 </html>
