--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
  	<head>
     	<meta charset="utf-8">
     	<title>Седона</title>
+    	<!-- <link rel="stylesheet" href="css/style.css"> -->
   </head>
   	<body>
   		<div class="wrapper"> 
 	  		<header class="main-header">
-	  			<a class="main-header-logo" href="#">
-	  				<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
-	  			</a>
 	  			<nav class="main-navigation">
 	  				<ul class="site-navigation-left">
 	  					<li><a href="#">Информация</a></li>
 	  					<li><a href="#">Фото и видео</a></li>
 	  				</ul>
+	  				<a class="main-header-logo" href="#">
+	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
+	  				</a>
 	  				<ul class="site-navigation-right">
 	  					<li><a href="#">Карта штата</a></li>
-	  					<li><a href="#">Гостиницы</a></li>
+	  					<li><a href="hotels.html">Гостиницы</a></li>
 	  				</ul>
 	  			</nav>
 	  		</header>
@@ -27,7 +28,7 @@
 	  				<h2 class="visually-hidden">Welcome to Sedona</h2>
 	  				<img src="http://placehold.it/255x85" width="255" height="85" alt="Welcome to">
 	  				<img src="http://placehold.it/460x75" width="460" height="75" alt="Sedona">
-	  				<img src="http://placehold.it/295x80" width="295" height="80" alt="&laquo;Because the Grand Canyon sucks!&raquo;">
+	  				<img src="http://placehold.it/295x80" width="295" height="80" alt="«Because the Grand Canyon sucks!»">
 	  			</section>
 	  			<section class="features">
 	  				<h2 class="visually-hidden">Преимущетсва</h2>
@@ -35,56 +36,56 @@
 		  				<h3> Седона — небольшой городок в Аризоне, заслуживающий большего!</h3>
 		  				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 	  				</div>
-	  				<div class="fetures-list">
-	  					<div class="feture">
+	  				<ul class="fetures-list">
+	  					<li class="feture">
 	  						<h3>Настоящий городок</h3>
-	  						<p>&nbsp;&mdash; №1&nbsp;&mdash;</p>
-	  						<p>Седона &nbsp; не аттракцион для туристов, там течет своя жизнь</p>
-	  					</div>
-	  				</div>
-	  				<div class="fetures-hight-list">
-	  					<div class="feture-hight">
+	  						<p>— №1 —</p>
+	  						<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
+	  					</li>
+	  				</ul>
+	  				<ul class="fetures-hight-list">
+	  					<li class="feture-hight">
 	  						<h3>Жилье</h3>
 	  						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-	  					</div>
-	  					<div class="feture-hight">
+	  					</li>
+	  					<li class="feture-hight">
 	  						<h3>Еда</h3>
 	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-	  					</div>
-	  					<div class="feture-hight">
+	  					</li>
+	  					<li class="feture-hight">
 	  						<h3>Сувениры</h3>
 	  						<p>Не только китайского, но и местного производства!</p>
-	  					</div>
-	  				</div>
-	  				<div class="fetures-list">
-	  					<div class="feture">
+	  					</li>
+	  				</ul>
+	  				<ul class="fetures-list">
+	  					<li class="feture">
 	  						<h3>Там есть мост дьявола</h3>
-	  						<p>&nbsp;&mdash; №2&nbsp;&mdash;</p>
+	  						<p>— №2 —</p>
 	  						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-	  					</div>
-	  				</div>
-	  				<div class="fetures-list">
-	  					<div class="feture">
+	  					</li>
+	  				</ul>
+	  				<ul class="fetures-list">
+	  					<li class="feture">
 	  						<h3>Небольшая площадь</h3>
-	  						<p>&nbsp;&mdash; №3&nbsp;&mdash;</p>
+	  						<p>— №3 —</p>
 	  						<p>Все достопримечательности находятся очень близко</p>
-	  					</div>
-	  					<div class="feture">
+	  					</li>
+	  					<li class="feture">
 	  						<h3>Красивая дорога</h3>
-	  						<p>&nbsp;&mdash; №4&nbsp;&mdash;</p>
+	  						<p>— №4 —</p>
 	  						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-	  					</div>
-	  					<div class="feture">
+	  					</li>
+	  					<li class="feture">
 	  						<h3>Мало туристов</h3>
-	  						<p>&nbsp;&mdash; №5&nbsp;&mdash;</p>
+	  						<p>— №5 —</p>
 	  						<p>Большинство едет в Гранд Каньон и толпится там</p>
-	  					</div>
-	  				</div>
+	  					</li>
+	  				</ul>
 	  			</section>
 	  			<section class="offers">
 	  				<h2>Заинтересовались?</h2>
 	  				<p>Укажтите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-	  				<span class="button hostel-search-button">Поиск гостиницы в Седоне</span>
+	  				<span class="button hotel-search-button">Поиск гостиницы в Седоне</span>
 	  			</section>
 	  			<section class="map">
 	  				<h2 class="visually-hidden">Карта</h2>
@@ -108,7 +109,7 @@
 	  				website by <a href="https://htmlacademy.ru/">HTML Academy</a>
 	  			</p>
 	  		</footer>
-	  		<section class="modal modla-hostel-search">
+	  		<section class="modal modla-hotel-search">
 	  			<h2 class="visually-hidden">Поиск гостиницы</h2>
 
 	  			<!-- Здесь будет форма -->
