--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  					<li><a href="#">Информация</a></li>
 	  					<li><a href="#">Фото и видео</a></li>
 	  				</ul>
-	  				<a class="main-header-logo" href="#">
+	  				<a class="main-header-logo" href="index.html">
 	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation-right">
@@ -36,46 +36,46 @@
 		  				<h3> Седона — небольшой городок в Аризоне, заслуживающий большего!</h3>
 		  				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 	  				</div>
-	  				<ul class="fetures-list">
-	  					<li class="feture">
+	  				<ul class="features-list feature-with-image">
+	  					<li class="feature">
 	  						<h3>Настоящий городок</h3>
 	  						<p>— №1 —</p>
 	  						<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
 	  					</li>
 	  				</ul>
-	  				<ul class="fetures-hight-list">
-	  					<li class="feture-hight">
+	  				<ul class="features-hight-list">
+	  					<li class="feature-hight">
 	  						<h3>Жилье</h3>
 	  						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 	  					</li>
-	  					<li class="feture-hight">
+	  					<li class="feature-hight">
 	  						<h3>Еда</h3>
 	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 	  					</li>
-	  					<li class="feture-hight">
+	  					<li class="feature-hight">
 	  						<h3>Сувениры</h3>
 	  						<p>Не только китайского, но и местного производства!</p>
 	  					</li>
 	  				</ul>
-	  				<ul class="fetures-list">
-	  					<li class="feture">
+	  				<ul class="features-list feature-with-image">
+	  					<li class="feature">
 	  						<h3>Там есть мост дьявола</h3>
 	  						<p>— №2 —</p>
 	  						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 	  					</li>
 	  				</ul>
-	  				<ul class="fetures-list">
-	  					<li class="feture">
+	  				<ul class="features-list">
+	  					<li class="feature">
 	  						<h3>Небольшая площадь</h3>
 	  						<p>— №3 —</p>
 	  						<p>Все достопримечательности находятся очень близко</p>
 	  					</li>
-	  					<li class="feture">
+	  					<li class="feature">
 	  						<h3>Красивая дорога</h3>
 	  						<p>— №4 —</p>
 	  						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 	  					</li>
-	  					<li class="feture">
+	  					<li class="feature">
 	  						<h3>Мало туристов</h3>
 	  						<p>— №5 —</p>
 	  						<p>Большинство едет в Гранд Каньон и толпится там</p>
