Мелкие правки index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     	<meta charset="utf-8">
     	<title>Седона</title>
     	<!-- <link rel="stylesheet" href="css/style.css"> -->
-  </head>
+  	</head>
   	<body>
   		<div class="wrapper"> 
 	  		<header class="main-header">
@@ -23,9 +23,9 @@
 	  			</nav>
 	  		</header>
 	  		<main class="container">
-	  			<h1 class="visually-hidden">Sedona</h1>
+	  			<h1 class="visually-hidden">Седона</h1>
 	  			<section class="welcome">
-	  				<h2 class="visually-hidden">Welcome to Sedona</h2>
+	  				<h2 class="visually-hidden">Добро пожаловать в Седону</h2>
 	  				<img src="http://placehold.it/255x85" width="255" height="85" alt="Welcome to">
 	  				<img src="http://placehold.it/460x75" width="460" height="75" alt="Sedona">
 	  				<img src="http://placehold.it/295x80" width="295" height="80" alt="«Because the Grand Canyon sucks!»">
@@ -109,7 +109,7 @@
 	  				website by <a href="https://htmlacademy.ru/">HTML Academy</a>
 	  			</p>
 	  		</footer>
-	  		<section class="modal modla-hotel-search">
+	  		<section class="modal modal-hotel-search">
 	  			<h2 class="visually-hidden">Поиск гостиницы</h2>
 
 	  			<!-- Здесь будет форма -->
