Внес правки согласно замечаниям
1. у ссылок в меню нет "href"
2. ссылка в футере ведет куда нужно

--- a/hotels.html
+++ b/hotels.html
@@ -13,10 +13,10 @@
 	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
-	  					<li><a href="#">Информация</a></li>
-	  					<li><a href="#">Фото и видео</a></li>
-	  					<li><a href="#">Карта штата</a></li>
-	  					<li><a class="current-page" href="hotels.html">Гостиницы</a></li>
+	  					<li><a>Информация</a></li>
+	  					<li><a>Фото и видео</a></li>
+	  					<li><a>Карта штата</a></li>
+	  					<li><a class="current-page">Гостиницы</a></li>
 	  				</ul>
 	  			</nav>
 	  		</header>
@@ -33,10 +33,12 @@
 	  				<h2 class="visually-hidden">Результаты поиска</h2>
 	  				<div class="seacrh-result-info">
 	  					<p>Найдено: 3</p>
-	  					<p>Сортировка:</p>
-						<a class="sort-type current-sort-type" href="#">По цене</a>
-  						<a class="sort-type" href="#">По типу</a>
-  						<a class="sort-type" href="#">По рейтингу</a>
+	  					<div class="sort-setting">
+		  					<p>Сортировка:</p>
+							<a class="sort-type current-sort-type" href="#">По цене</a>
+	  						<a class="sort-type" href="#">По типу</a>
+	  						<a class="sort-type" href="#">По рейтингу</a>
+  						</div>
   						<a class="sort-direction" href="#"></a>
   						<a class="sort-direction current-sort-direction" href="#"></a>
 	  				</div>
@@ -95,7 +97,7 @@
 	  				</ul>
 	  			</div>
 	  			<p class="footer-copyright">
-	  				website by <a href="https://htmlacademy.ru/">HTML Academy</a>
+	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
 	  			</p>
 	  		</footer>
 	  	</div>
