--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
-	  					<li><a href="#">Информация</a></li>
-	  					<li><a href="#">Фото и видео</a></li>
-	  					<li><a href="#">Карта штата</a></li>
+	  					<li><a>Информация</a></li>
+	  					<li><a>Фото и видео</a></li>
+	  					<li><a>Карта штата</a></li>
 	  					<li><a href="hotels.html">Гостиницы</a></li>
 	  				</ul>
 	  			</nav>
@@ -109,7 +109,7 @@
 	  				</ul>
 	  			</div>
 	  			<p class="footer-copyright">
-	  				website by <a href="https://htmlacademy.ru/">HTML Academy</a>
+	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
 	  			</p>
 	  		</footer>
 	  	</div>
