Правки такие правки)

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   		<div class="container"> 
 	  		<header class="main-header">
 	  			<nav class="main-navigation">
-	  				<a class="main-header-logo" href="index.html">
+	  				<a class="main-header-logo">
 	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
-	  					<li><a>Информация</a></li>
-	  					<li><a>Фото и видео</a></li>
-	  					<li><a>Карта штата</a></li>
+	  					<li><a href="#">Информация</a></li>
+	  					<li><a href="#">Фото и видео</a></li>
+	  					<li><a href="#">Карта штата</a></li>
 	  					<li><a href="hotels.html">Гостиницы</a></li>
 	  				</ul>
 	  			</nav>
