--- a/hotels.html
+++ b/hotels.html
@@ -13,9 +13,9 @@
 	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
-	  					<li><a>Информация</a></li>
-	  					<li><a>Фото и видео</a></li>
-	  					<li><a>Карта штата</a></li>
+	  					<li><a href="#">Информация</a></li>
+	  					<li><a href="#">Фото и видео</a></li>
+	  					<li><a href="#">Карта штата</a></li>
 	  					<li><a class="current-page">Гостиницы</a></li>
 	  				</ul>
 	  			</nav>
