--- a/hotels.html
+++ b/hotels.html
@@ -3,10 +3,12 @@
  	<head>
     	<meta charset="utf-8">
     	<title>Седона</title>
+    	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
     	<!-- <link rel="stylesheet" href="css/style.css"> -->
   	</head>
   	<body>
-  		<div class="container"> 
+  		<div class="container">
+
 	  		<header class="main-header">
 	  			<nav class="main-navigation">
 	  				<a class="main-header-logo" href="index.html">
@@ -22,25 +24,26 @@
 	  		</header>
 
 	  		<main class="content-container">
-	  			<h1 class="visually-hidden">Поиск гостиниц в Седоне</h1>
+	  			<h1 class="visually-hidden">Гостиницы Седоны</h1>
 	  			<section class="hotels-search-setting">
 	  				<h2 class="visually-hidden">Настройки поиска</h2>
 
+
 	  				<!-- Здесь будет форма -->
 
+
 	  			</section>
+
 	  			<section class="hotels-search-results">
 	  				<h2 class="visually-hidden">Результаты поиска</h2>
 	  				<div class="seacrh-result-info">
 	  					<p>Найдено: 3</p>
-	  					<div class="sort-setting">
-		  					<p>Сортировка:</p>
-							<a class="sort-type current-sort-type" href="#">По цене</a>
-	  						<a class="sort-type" href="#">По типу</a>
-	  						<a class="sort-type" href="#">По рейтингу</a>
-  						</div>
-  						<a class="sort-direction" href="#"></a>
-  						<a class="sort-direction current-sort-direction" href="#"></a>
+	  					<p>Сортировка:</p>
+						<a class="sorting-type current-sorting-type" href="#">По цене</a>
+  						<a class="sorting-type" href="#">По типу</a>
+  						<a class="sorting-type" href="#">По рейтингу</a>
+  						<a class="sorting-direction" href="#"></a>
+  						<a class="sortign-direction current-sorting-direction" href="#"></a>
 	  				</div>
 	  				<ul class="seacrh-result-list">
 	  					<li>
@@ -85,6 +88,7 @@
 	  				</ul>
 	  			</section>
 	  		</main>
+
 	  		<footer class="main-footer">
 	  			<p class="footer-hashtag">
 	  				<b>#visitsedona</b>
@@ -100,6 +104,8 @@
 	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
 	  			</p>
 	  		</footer>
+
 	  	</div>
+	  	<!--<script src="js/script.js"></script>-->
   	</body>
 </html>
