--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
  	<head>
     	<meta charset="utf-8">
     	<title>Седона</title>
+    	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
     	<!-- <link rel="stylesheet" href="css/style.css"> -->
   	</head>
   	<body>
   		<div class="container"> 
+
 	  		<header class="main-header">
 	  			<nav class="main-navigation">
 	  				<a class="main-header-logo">
@@ -20,12 +22,14 @@
 	  				</ul>
 	  			</nav>
 	  		</header>
+
 	  		<main class="content-container">
 	  			<h1 class="visually-hidden">Седона</h1>
 	  			<section class="welcome">
 	  				<h2 class="visually-hidden">Добро пожаловать в Седону</h2>
 	  				<img src="http://placehold.it/460x350" width="460" height="350" alt="Welcome to Sedona «Because the Grand Canyon sucks!»">
 	  			</section>
+
 	  			<section class="features">
 	  				<h2 class="visually-hidden">Преимущетсва</h2>
 	  				<div class="features-description">
@@ -33,51 +37,52 @@
 		  				<p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 	  				</div>
 	  				<ul class="features-list feature-with-image">
-	  					<li class="feature">
+	  					<li class="feature-item">
 	  						<h3>Настоящий городок</h3>
 	  						<p>— №1 —</p>
 	  						<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
 	  					</li>
 	  				</ul>
 	  				<ul class="features-hight-list">
-	  					<li class="feature-hight">
+	  					<li class="feature-hight-item">
 	  						<h3>Жилье</h3>
 	  						<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 	  					</li>
-	  					<li class="feature-hight">
+	  					<li class="feature-hight-item">
 	  						<h3>Еда</h3>
 	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 	  					</li>
-	  					<li class="feature-hight">
+	  					<li class="feature-hight-item">
 	  						<h3>Сувениры</h3>
 	  						<p>Не только китайского, но и местного производства!</p>
 	  					</li>
 	  				</ul>
 	  				<ul class="features-list feature-with-image">
-	  					<li class="feature">
+	  					<li class="feature-item">
 	  						<h3>Там есть мост дьявола</h3>
 	  						<p>— №2 —</p>
 	  						<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 	  					</li>
 	  				</ul>
 	  				<ul class="features-list">
-	  					<li class="feature">
+	  					<li class="feature-item">
 	  						<h3>Небольшая площадь</h3>
 	  						<p>— №3 —</p>
 	  						<p>Все достопримечательности находятся очень близко</p>
 	  					</li>
-	  					<li class="feature">
+	  					<li class="feature-item">
 	  						<h3>Красивая дорога</h3>
 	  						<p>— №4 —</p>
 	  						<p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 	  					</li>
-	  					<li class="feature">
+	  					<li class="feature-item">
 	  						<h3>Мало туристов</h3>
 	  						<p>— №5 —</p>
 	  						<p>Большинство едет в Гранд Каньон и толпится там</p>
 	  					</li>
 	  				</ul>
 	  			</section>
+
 	  			<section class="offers">
 	  				<h2 class="visually-hidden">Предложения</h2>
 	  				<b>Заинтересовались?</b>
@@ -87,16 +92,21 @@
 			  			
 
 			  			<!-- Здесь будет форма -->
+
 			  			
 			  		</div>
 	  			</section>
+
 	  			<section class="map">
 	  				<h2 class="visually-hidden">Карта</h2>
 
+
 	  				<!-- Карта будет тут-->
+
 
 	  			</section>
 	  		</main>
+
 	  		<footer class="main-footer">
 	  			<p class="footer-hashtag">
 	  				<b>#visitsedona</b>
@@ -112,6 +122,8 @@
 	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
 	  			</p>
 	  		</footer>
+
 	  	</div>
+	  	<!--<script src="js/script.js"></script>-->
   	</body>
 </html>
