Добавил контентные изображения в разметку

--- a/hotels.html
+++ b/hotels.html
@@ -12,7 +12,7 @@
 	  		<header class="main-header">
 	  			<nav class="main-navigation">
 	  				<a class="main-header-logo" href="index.html">
-	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
+	  					<img src="img/logo-sedona.png" width="138" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
 	  					<li><a href="#">Информация</a></li>
@@ -48,7 +48,7 @@
 	  				<ul class="seacrh-result-list">
 	  					<li>
 	  						<p class="hotel-image">
-	  							<img src="http://placehold.it/130x90" width="130" height="90" alt="Amara Resort & Spa">
+	  							<img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
 	  						</p>
 	  						<h3>
 	  							<a href="#">Amara Resort &amp; SPA</a>
@@ -61,7 +61,7 @@
 	  					</li>
 	  					<li>
 	  						<p class="hotel-image">
-	  							<img src="http://placehold.it/130x90" width="130" height="90" alt="Desert Quail Inn">
+	  							<img src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
 	  						</p>
 	  						<h3>
 	  							<a href="#">Desert Quail Inn</a>
@@ -74,7 +74,7 @@
 	  					</li>
 	  					<li>
 	  						<p class="hotel-image">
-	  							<img src="http://placehold.it/130x90" width="130" height="90" alt="Villas At Poco Diablo">
+	  							<img src="img/hotel-3.jpg" width="135" height="90" alt="Villas At Poco Diablo">
 	  						</p>
 	  						<h3>
 	  							<a href="#">Villas At Poco Diablo</a>
