--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  		<header class="main-header">
 	  			<nav class="main-navigation">
 	  				<a class="main-header-logo">
-	  					<img src="http://placehold.it/135x70" width="135" height="70" alt="Sedona">
+	  					<img src="img/logo-sedona.png" width="138" height="70" alt="Sedona">
 	  				</a>
 	  				<ul class="site-navigation">
 	  					<li><a href="#">Информация</a></li>
@@ -27,7 +27,7 @@
 	  			<h1 class="visually-hidden">Седона</h1>
 	  			<section class="welcome">
 	  				<h2 class="visually-hidden">Добро пожаловать в Седону</h2>
-	  				<img src="http://placehold.it/460x350" width="460" height="350" alt="Welcome to Sedona «Because the Grand Canyon sucks!»">
+	  				<img src="img/welcome.png" width="458" height="352" alt="Welcome to Sedona «Because the Grand Canyon sucks!»">
 	  			</section>
 
 	  			<section class="features">
