Абзаца больше нет)

--- a/hotels.html
+++ b/hotels.html
@@ -90,8 +90,8 @@
 						<a class="sorting-type current-sorting-type" href="#">По цене</a>
   						<a class="sorting-type" href="#">По типу</a>
   						<a class="sorting-type" href="#">По рейтингу</a>
-  						<a class="sorting-direction" href="#">По возрастанию</a>
-  						<a class="sortign-direction current-sorting-direction" href="#">По убыванию</a>
+  						<a class="sorting-direction" href="#"><span class="visually-hidden">По возрастанию</span></a>
+  						<a class="sortign-direction current-sorting-direction" href="#"><span class="visually-hidden">По убыванию</span></a>
 	  				</div>
 	  				<ul class="filter-result-list">
 	  					<li>
@@ -143,13 +143,13 @@
 	  			</p>
 	  			<div class="footer-social">
 	  				<ul>
-	  					<li><a class="social-button" href="#">Twitter</a></li>
-	  					<li><a class="social-button" href="#">Facebook</a></li>
-	  					<li><a class="social-button" href="#">YouTube</a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">YouTube</span></a></li>
 	  				</ul>
 	  			</div>
 	  			<p class="footer-copyright">
-	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTML Academy</span></a>
 	  			</p>
 	  		</footer>
 
