--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 
 	  			<section class="map">
 	  				<h2 class="visually-hidden">Карта</h2>
-	  				<p>
-						<img src="img/map.jpg" width="780" height="460" alt="Расположение города Седона на карте">
-					</p>
+					<img src="img/map.jpg" width="780" height="460" alt="Расположение города Седона на карте">
 	  			</section>
 	  		</main>
 
@@ -127,13 +125,13 @@
 	  			</p>
 	  			<div class="footer-social">
 	  				<ul>
-	  					<li><a class="social-button" href="#">Twitter</a></li>
-	  					<li><a class="social-button" href="#">Facebook</a></li>
-	  					<li><a class="social-button" href="#">YouTube</a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
+	  					<li><a class="social-button" href="#"><span class="visually-hidden">YouTube</span></a></li>
 	  				</ul>
 	  			</div>
 	  			<p class="footer-copyright">
-	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTML Academy</span></a>
 	  			</p>
 	  		</footer>
 
